2008-05-28 Mario Limonciello <mario_limonciello@dell.com>
        * ati-packager.sh:
        - Use `ls` to determine supported releases
        * dists/:
        - Add numeric symlinks for more supported releases

2008-05-27 Mario Limonciello <superm1@ubuntu.com>
        * dists/intrepid/copyright:
        - Update to packaging standards for Ubuntu.
        * dists/intrepid/control:
        - Add additional package for creating module
        - Hardcode to i386/amd64 only
          aliases so that Jockey will know how to install this
        * dists/intrepid/{rules,modaliases}:
        - Adapt to rules for package creation as well.
        * ati-packager.sh:
        - Pad the version number using printf so we don't run into conflicts later.

2008-05-26 Mario Limonciello <superm1@ubuntu.com>
        * dists/edgy:
        - Drop, 6.10 has reached EOL, see http://www.ubuntu.com/news/ubuntu610end-of-life
        * dists/{dapper,feisty}:
        - Drop as they don't have support for DKMS, which we will require going forward.
        * Remove old modules/ skeleton.
        * dists/intrepid:
        - Revamp to be CDBS based and much more maintainable
        * dists/{gutsy,hardy}:
        - Add symlink to current dev release.  This will prevent the necessity to port
          changes to old releases.  If ever they don't match up, they can be made into
          explicit directories instead.
        * dists/source:
        - Add source target that is a symlink to current dev release
        * ati-packager.sh:
        - Add source target for building source packages that will go
          "directly" into the Ubuntu archive.
        - Drop libgl1-mesa-glx dependency.
        - Drop old retired release(s)

2008-05-19 Mario Limonciello <superm1@ubuntu.com>
        * dists/*/rules
        - Add two new binaries in bin/
        * dists/hardy/control
        - Change depends to linux-libc-dev rather than libc6-dev
        * ati-packager.sh
        - Add support for API v2